--- a/css1/main.css
+++ b/css1/main.css
@@ -695,7 +695,7 @@ h5 + hr {
   color: #3c5898;
 }
 
-.fa-pinterest:hover {
+.fa-youtube:hover {
   color: #cc1c2c;
 }
 
@@ -707,7 +707,7 @@ h5 + hr {
   color: #00b6e9;
 }
 
-.fa-whatsapp:hover {
+.fa-linkedin:hover {
   color: #19d208;
 }
 
@@ -723,8 +723,8 @@ h5 + hr {
 
 .sociallinks li a i {
   width: 35px;
-  height: 25px;
-  padding-top: 10px;
+  height: 35px;
+  padding-top: 3px;
   transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   -ms-transition: all 0.5s ease;
@@ -749,7 +749,7 @@ h5 + hr {
   background: #3c5898;
 }
 
-.sociallinks li a i.fa-pinterest:hover {
+.sociallinks li a i.fa-youtube:hover {
   background: #cc1c2c;
 }
 
@@ -765,7 +765,7 @@ h5 + hr {
   background: #00b6e9;
 }
 
-.sociallinks li a i.fa-whatsapp:hover {
+.sociallinks li a i.fa-linkedin:hover {
   background: #19d208;
 }
 
